--- a/app/views/renalware/patients/edit.html.slim
+++ b/app/views/renalware/patients/edit.html.slim
@@ -1,15 +1,12 @@
-.wide-screen
-  .columns.large-12
-    = render "record_header"
+= render layout: "layout", locals: { title: "Demographics" } do
+  .row
+    .large-12.columns
 
-.row
-  .large-12.columns
+      = simple_form_for @patient,
+          wrapper: "horizontal_form" do |f|
 
-    = simple_form_for @patient,
-        wrapper: "horizontal_form" do |f|
+        = render partial: "renalware/patients/form", locals: { patient: f }
 
-      = render partial: "renalware/patients/form", locals: { patient: f }
-
-      = submit_tag "Update", class: "button"
-      span= " or "
-      = link_to "Cancel", patient_path(@patient)
+        = submit_tag "Update", class: "button"
+        span= " or "
+        = link_to "Cancel", patient_path(@patient)
