--- a/app/views/renalware/transplants/registrations/show.html.slim
+++ b/app/views/renalware/transplants/registrations/show.html.slim
@@ -1,14 +1,14 @@
-= render "record_header"
+= render layout: "renalware/patients/layout", locals: { title: "Transplant Wait List Registration" } do
 
 - return unless @registration
-.document-view
-  - ["Codes", "CRF", "HLA", "Transplant", "Organs", "NHB Consent"].each do |group|
-    = render "renalware/shared/documents/attributes_group",
-        group: @registration.document.public_send(group.parameterize('_')),
-        legend: group, destination: group.parameterize('_')
+  .document-view
+    - ["Codes", "CRF", "HLA", "Transplant", "Organs", "NHB Consent"].each do |group|
+      = render "renalware/shared/documents/attributes_group",
+          group: @registration.document.public_send(group.parameterize('_')),
+          legend: group, destination: group.parameterize('_')
 
-  = render "renalware/shared/attributes_group",
-      legend: "Admin", destination: "admin",
-      resource: @registration,
-      attributes: %i(referred_on assessed_on contact notes)
+    = render "renalware/shared/attributes_group",
+        legend: "Admin", destination: "admin",
+        resource: @registration,
+        attributes: %i(referred_on assessed_on contact notes)
 
