Add patient layout to transplant recipient workups

--- a/app/views/renalware/transplants/recipient_workups/show.html.slim
+++ b/app/views/renalware/transplants/recipient_workups/show.html.slim
@@ -1,4 +1,4 @@
-= render "record_header"
+= render layout: "renalware/patients/layout", locals: { title: "Transplant Recipient Workup" } do
 
 - if @workup
   .document-view
