--- a/app/views/renalware/transplants/recipient_operations/edit.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/edit.html.slim
@@ -1,4 +1,4 @@
-= render "record_header"
+= render layout: "renalware/patients/layout", locals: { title: "Transplant Recipient Operation" } do
 
 .row
   .columns.large-12
