--- a/app/views/renalware/transplants/donor_dashboards/show.html.slim
+++ b/app/views/renalware/transplants/donor_dashboards/show.html.slim
@@ -1,10 +1,6 @@
-.row
-  .columns.large-12
-    = render "renalware/patients/patient_info_header", model: @patient
-    = render "renalware/patients/mini_renal_profile", model: @patient
-
-    h2 Transplant Donation Info
-
-    = render "renalware/transplants/donations/list"
-    = render "renalware/transplants/donor_workups/summary"
-    = render "renalware/transplants/donor_operations/list"
+= render layout: "renalware/patients/layout", locals: { title: "Transplant Donation Info" } do
+  .row
+    .columns.large-12
+      = render "renalware/transplants/donations/list"
+      = render "renalware/transplants/donor_workups/summary"
+      = render "renalware/transplants/donor_operations/list"
