--- a/app/views/renalware/transplants/donations/new.html.slim
+++ b/app/views/renalware/transplants/donations/new.html.slim
@@ -1,9 +1,8 @@
-= render "record_header"
-
-.row
-  .columns.large-12
-    .document
-      = simple_form_for @donation,
-          url: patient_transplants_donations_path(@patient),
-          wrapper: "horizontal_form" do |f|
-        = render 'form', f: f
+= render layout: "renalware/patients/layout", locals: { title: "Transplant Donation" } do
+  .row
+    .columns.large-12
+      .document
+        = simple_form_for @donation,
+            url: patient_transplants_donations_path(@patient),
+            wrapper: "horizontal_form" do |f|
+          = render 'form', f: f
