--- a/app/views/renalware/transplants/donor_workups/show.html.slim
+++ b/app/views/renalware/transplants/donor_workups/show.html.slim
@@ -1,31 +1,30 @@
-= render "record_header"
+= render layout: "renalware/patients/layout", locals: { title: "Transplant Donor Workup" } do
+  - return unless @workup
+  .document-view
+    = render "renalware/shared/documents/attributes_group",
+        group: @workup.document.comorbidities,
+        legend: "Co-morbidities", destination: "comorbidities"
 
-- return unless @workup
-.document-view
-  = render "renalware/shared/documents/attributes_group",
-      group: @workup.document.comorbidities,
-      legend: "Co-morbidities", destination: "comorbidities"
+    = render "renalware/shared/documents/attributes_group",
+        group: @workup.document.infections,
+        legend: "Virology/Bacteriology/Cytology", destination: "infections"
 
-  = render "renalware/shared/documents/attributes_group",
-      group: @workup.document.infections,
-      legend: "Virology/Bacteriology/Cytology", destination: "infections"
+    = render "renalware/shared/documents/attributes_group",
+        group: @workup.document.imaging_and_scans,
+        legend: "Imaging and Scans", destination: "imaging_and_scans"
 
-  = render "renalware/shared/documents/attributes_group",
-      group: @workup.document.imaging_and_scans,
-      legend: "Imaging and Scans", destination: "imaging_and_scans"
+    = render "renalware/shared/documents/attributes_group",
+        group: @workup.document.creatinine_clearance,
+        legend: "Creatinine Clearance", destination: "creatinine_clearance"
 
-  = render "renalware/shared/documents/attributes_group",
-      group: @workup.document.creatinine_clearance,
-      legend: "Creatinine Clearance", destination: "creatinine_clearance"
+    = render "renalware/shared/documents/attributes_group",
+        group: @workup.document.glomerular_filtration_rate,
+        legend: "Glomerular Filtration Rate (GFR)", destination: "glomerular_filtration_rate"
 
-  = render "renalware/shared/documents/attributes_group",
-      group: @workup.document.glomerular_filtration_rate,
-      legend: "Glomerular Filtration Rate (GFR)", destination: "glomerular_filtration_rate"
+    = render "renalware/shared/documents/attributes_group",
+        group: @workup.document.urine_dipsticks,
+        legend: "Urine Dipsticks", destination: "urine_dipsticks"
 
-  = render "renalware/shared/documents/attributes_group",
-      group: @workup.document.urine_dipsticks,
-      legend: "Urine Dipsticks", destination: "urine_dipsticks"
-
-  = render "renalware/shared/documents/attributes_group",
-      group: @workup.document.other_investigations,
-      legend: "Other Investigations", destination: "other_investigations"
+    = render "renalware/shared/documents/attributes_group",
+        group: @workup.document.other_investigations,
+        legend: "Other Investigations", destination: "other_investigations"
