Wrap donor operation with patient layout

--- a/app/views/renalware/transplants/donor_operations/edit.html.slim
+++ b/app/views/renalware/transplants/donor_operations/edit.html.slim
@@ -1,9 +1,8 @@
-= render "record_header"
-
-.row
-  .columns.large-12
-    .document
-      = simple_form_for @donor_operation,
-          url: patient_transplants_donor_operation_path(@patient, @donor_operation),
-          wrapper: "horizontal_form" do |f|
-        = render 'form', f: f
+= render layout: "renalware/patients/layout", locals: { title: "Transplant Donor Operation" } do
+  .row
+    .columns.large-12
+      .document
+        = simple_form_for @donor_operation,
+            url: patient_transplants_donor_operation_path(@patient, @donor_operation),
+            wrapper: "horizontal_form" do |f|
+          = render 'form', f: f
