--- a/app/views/renalware/events/events/index.html.slim
+++ b/app/views/renalware/events/events/index.html.slim
@@ -1,13 +1,11 @@
-.wide-screen
-  .columns.large-12
-    = render "header"
+= render layout: "renalware/patients/layout", locals: { title: "Events" } do
+  .wide-screen
+    table
+      thead
+        th Added
+        th Event Type
+        th Description
+        th Date/Time
 
-  table
-    thead
-      th Added
-      th Event Type
-      th Description
-      th Date/Time
-
-    tbody
-      = render @events
+      tbody
+        = render @events
