--- a/app/views/renalware/clinic_visits/edit.html.slim
+++ b/app/views/renalware/clinic_visits/edit.html.slim
@@ -1,6 +1,5 @@
+= render layout: "renalware/patients/layout", locals: { title: "Clinic Visits" } do
 .wide-screen
-  .columns.large-12
-    = render "header"
   .row
     = simple_form_for [@patient, @clinic_visit],
       url: patient_clinic_visit_path(patient_id: @patient.to_param, id: @clinic_visit.to_param) do |f|
