--- a/app/views/renalware/letters/edit.html.slim
+++ b/app/views/renalware/letters/edit.html.slim
@@ -1,10 +1,8 @@
-.row
-  h2 Edit Letter
+= render layout: "renalware/patients/layout", locals: { title: "Letters" } do
+  .row
+    .large-12.columns
+      = form_for [@patient, @letter], as: :letter,
+        url: patient_letter_path(patient_id: @patient.to_param, id: @letter.to_param) do |f|
 
-.row
-  .large-12.columns
-    = form_for [@patient, @letter], as: :letter,
-      url: patient_letter_path(patient_id: @patient.to_param, id: @letter.to_param) do |f|
-
-      = render partial: 'renalware/letters/form', locals: { f: f }
-      = f.submit 'Update', class: 'button save'
+        = render partial: 'renalware/letters/form', locals: { f: f }
+        = f.submit 'Update', class: 'button save'
