--- a/app/views/renalware/letters/index.html.slim
+++ b/app/views/renalware/letters/index.html.slim
@@ -1,15 +1,14 @@
-.wide-screen
-  .columns.large-12
-    = render "header"
+= render layout: "renalware/patients/layout", locals: { title: "Letters" } do
+  .wide-screen
+    .row
+      table.letters
+        thead
+          tr
+            th
+            th Author
+            th Description
+            th State
+            th Last updated
 
-    table.letters
-      thead
-        tr
-          th
-          th Author
-          th Description
-          th State
-          th Last updated
-
-      tbody
-        = render @letters
+        tbody
+          = render @letters
