--- a/app/views/renalware/letters/new.html.slim
+++ b/app/views/renalware/letters/new.html.slim
@@ -1,9 +1,6 @@
-.wide-screen
-  .columns.large-12
-    = render "header"
-
-.row
-  .large-12.columns
-    = form_for [@patient, @letter], as: :letter, url: patient_letters_path(@patient) do |f|
-      = render partial: 'renalware/letters/form', locals: { f: f }
-      = f.submit 'Save', class: 'button'
+= render layout: "renalware/patients/layout", locals: { title: "Letters" } do
+  .row
+    .large-12.columns
+      = form_for [@patient, @letter], as: :letter, url: patient_letters_path(@patient) do |f|
+        = render partial: 'renalware/letters/form', locals: { f: f }
+        = f.submit 'Save', class: 'button'
