Remove row in preparation for patient sidebar navigation

--- a/app/views/renalware/deaths/edit.html.slim
+++ b/app/views/renalware/deaths/edit.html.slim
@@ -1,10 +1,11 @@
-.wide-screen
+.row
   .columns.large-12
     = render partial: "renalware/patients/patient_info_header", locals: { model: @patient }
     = render partial: "renalware/patients/mini_renal_profile", locals: { model: @patient }
 
 .row
-  h5 Cause of Death
+  .columns.large-12
+    h5 Cause of Death
 
 .row
   .large-12.columns
