--- a/app/views/renalware/patients/_layout.html.slim
+++ b/app/views/renalware/patients/_layout.html.slim
@@ -1,4 +1,4 @@
-.wide-screen
+.row
   .columns.large-12
     = render partial: "renalware/patients/patient_info_header", locals: { model: @patient }
     = render partial: "renalware/patients/mini_renal_profile", locals: { model: @patient }
