--- a/app/views/renalware/clinical_summaries/show.html.slim
+++ b/app/views/renalware/clinical_summaries/show.html.slim
@@ -1,5 +1,5 @@
 = render layout: "renalware/patients/layout", locals: { title: "Clinical Summary" } do
-  .wide-screen
+  .row
     .columns.large-6
       = field_set_tag do
         legend = link_to "#{@patient.problems.length} Problems", patient_problems_path(@patient)
@@ -18,7 +18,7 @@
             li class="drug-#{drug_types_colour_tag(p.medicatable.drug_types)}"
               = "#{p.medicatable.name}, #{p.dose}, #{p.medication_route.name} #{p.frequency}, #{l p.start_date}"
 
-  .wide-screen
+  .row
     .columns.large-12
       = field_set_tag do
         legend= link_to "#{@events.size} Patient Events", patient_events_path(@patient)
