--- a/app/views/renalware/events/events/index.html.slim
+++ b/app/views/renalware/events/events/index.html.slim
@@ -1,5 +1,5 @@
 = render layout: "renalware/patients/layout", locals: { title: "Events" } do
-  .wide-screen
+  .row
     table
       thead
         th Added
