--- a/app/views/renalware/modalities/modalities/index.html.slim
+++ b/app/views/renalware/modalities/modalities/index.html.slim
@@ -1,6 +1,5 @@
 = render layout: "renalware/patients/layout", locals: { title: "Modality History" } do
-  .wide-screen
-    .columns.large-12
+  .row
     table
       thead
         tr
