Introduces a basic side bar navigation for patients

--- a/app/views/renalware/exit_site_infections/edit.html.slim
+++ b/app/views/renalware/exit_site_infections/edit.html.slim
@@ -1,5 +1,4 @@
-= render layout: "renalware/pd/layout", locals: { header: "Exit Site Infection", patient: @patient } do
-
+= render layout: "renalware/patients/layout", locals: { title: "Exit Site Infection" } do
   .row
     .large-12.columns
       = render partial: "renalware/shared/errors", locals: { model: @exit_site_infection }
