--- a/app/views/renalware/pd_regimes/show.html.slim
+++ b/app/views/renalware/pd_regimes/show.html.slim
@@ -1,4 +1,4 @@
-= render layout: "renalware/pd/layout", locals: { header: "PD Regime", patient: @patient } do
+= render layout: "renalware/patient/layout", locals: { title: "PD Regime" } do
   .row
     .large-12.columns
       p
