--- a/app/views/renalware/exit_site_infections/new.html.slim
+++ b/app/views/renalware/exit_site_infections/new.html.slim
@@ -1,17 +1,17 @@
-= render layout: "renalware/pd/layout", locals: { header: "Exit Site Infection", patient: @patient } do
+= render layout: "renalware/patients/layout", locals: { title: "Exit Site Infection" } do
 
-.row
-  .large-12.columns
-    = render partial: "renalware/shared/errors", locals: { model: @exit_site_infection }
+  .row
+    .large-12.columns
+      = render partial: "renalware/shared/errors", locals: { model: @exit_site_infection }
 
-.row
-  .large-12.columns
-    = nested_form_for [@patient, @exit_site_infection] do |es|
+  .row
+    .large-12.columns
+      = nested_form_for [@patient, @exit_site_infection] do |es|
 
-      .row
-        = render partial: 'renalware/exit_site_infections/form', locals: { es: es }
+        .row
+          = render partial: 'renalware/exit_site_infections/form', locals: { es: es }
 
-      .row.button-padding
-        = submit_tag "Save", class: "button"
-        span= " or "
-        = link_to "cancel", patient_pd_summary_path(@patient)
+        .row.button-padding
+          = submit_tag "Save", class: "button"
+          span= " or "
+          = link_to "cancel", patient_pd_summary_path(@patient)
