--- a/app/views/renalware/patients/_layout.html.slim
+++ b/app/views/renalware/patients/_layout.html.slim
@@ -1,7 +1,7 @@
 .row
   .large-12.columns
     = render partial: "renalware/patients/header", locals: { model: @patient }
-  .large-2.columns
+  .large-2.columns.patient-side-nav
     = render partial: "renalware/patients/side_nav", locals: { model: @patient }
   .large-10.columns
     = render partial: "renalware/patients/mini_renal_profile", locals: { model: @patient }
