Knockback renal profile background colour

--- a/app/assets/stylesheets/renalware/renal_profile.css.scss
+++ b/app/assets/stylesheets/renalware/renal_profile.css.scss
@@ -1,6 +1,5 @@
 .renal-profile {
-  background-color: #FFFFB2;
+  background-color: #DEF0F6;
   padding: 0.5em;
-  border-radius: 0.5em;
   font-size: 0.9em;
 }
