Clean-up markup for doctors

--- a/app/views/renalware/doctors/new.html.slim
+++ b/app/views/renalware/doctors/new.html.slim
@@ -1,7 +1,8 @@
-= render "header"
+.row
+  = render "header"
 
 .row
-  .large-8.columns
+  .large-6.columns
     = form_for @doctor, as: :doctor do |f|
       = render partial: 'form', locals: { f: f }
       = f.submit 'Save', class: 'button'
