Clean-up markup for patients

--- a/app/views/renalware/patients/_mini_renal_profile.html.slim
+++ b/app/views/renalware/patients/_mini_renal_profile.html.slim
@@ -1,5 +1,6 @@
-.renal-profile
-  = link_to "ESRF", edit_patient_esrf_path(@patient)
-  | &nbsp;
-  = @patient.esrf
-  | &nbsp;
+.row
+  .renal-profile
+    = link_to "ESRF", edit_patient_esrf_path(@patient)
+    | &nbsp;
+    = @patient.esrf
+    | &nbsp;
