--- a/app/views/renalware/patients/_side_nav.html.slim
+++ b/app/views/renalware/patients/_side_nav.html.slim
@@ -1,4 +1,5 @@
 ul.side-nav
+  li.heading Overview
   li= link_to "Demographics", patient_path(@patient), title: "Demographics"
   li= link_to "Clinical Summary", patient_clinical_summary_path(@patient), title: "Clinical Summary"
   li= link_to "Modals", patient_modalities_path(@patient), title: "Patient Modality"
