--- a/app/views/renalware/patients/edit.html.slim
+++ b/app/views/renalware/patients/edit.html.slim
@@ -1,12 +1,8 @@
 = render layout: "layout", locals: { title: "Demographics" } do
-  .row
-    .large-12.columns
+  = simple_form_for @patient, wrapper: "horizontal_form" do |f|
 
-      = simple_form_for @patient,
-          wrapper: "horizontal_form" do |f|
+    = render partial: "renalware/patients/form", locals: { patient: f }
 
-        = render partial: "renalware/patients/form", locals: { patient: f }
-
-        = submit_tag "Update", class: "button"
-        span= " or "
-        = link_to "Cancel", patient_path(@patient)
+    = submit_tag "Update", class: "button"
+    span= " or "
+    = link_to "Cancel", patient_path(@patient)
