--- a/app/views/renalware/patients/new.html.slim
+++ b/app/views/renalware/patients/new.html.slim
@@ -1,14 +1,10 @@
-=render "header"
-
 .row
-  .large-12.columns
-    = render partial: "renalware/shared/errors", locals: { model: @patient }
+  = render "index_header"
+  = render partial: "renalware/shared/errors", locals: { model: @patient }
 
-    = simple_form_for @patient,
-        wrapper: "horizontal_form" do |f|
+  = simple_form_for @patient, wrapper: "horizontal_form" do |f|
+    = render partial: "renalware/patients/form", locals: { patient: f }
 
-      = render partial: "renalware/patients/form", locals: { patient: f }
-
-      = submit_tag "Save", class: "button"
-      span= " or "
-      = link_to "cancel", patients_path
+    = submit_tag "Save", class: "button"
+    span= " or "
+    = link_to "cancel", patients_path
