--- a/app/views/renalware/events/types/edit.html.slim
+++ b/app/views/renalware/events/types/edit.html.slim
@@ -1,6 +1,6 @@
-= render "header"
-
-= render partial: "renalware/shared/errors", locals: { model: @event_type }
+.row
+  = render "header"
+  = render partial: "renalware/shared/errors", locals: { model: @event_type }
 
 .row
   .large-6.columns
