Clean-up markup for medications

--- a/app/views/renalware/medications/index.html.slim
+++ b/app/views/renalware/medications/index.html.slim
@@ -1,20 +1,20 @@
 = render layout: "renalware/patients/layout", locals: { title: "Modality History" } do
-  .row
-    = render partial: "renalware/shared/errors", locals: { model: @patient }
+  = render partial: "renalware/shared/errors", locals: { model: @patient }
 
-  .row
-    = nested_form_for @patient, url: patient_medications_batch_path(@patient) do |f|
-      = f.fields_for :medications do |pm|
+  = nested_form_for @patient, url: patient_medications_batch_path(@patient) do |f|
+    = f.fields_for :medications do |pm|
 
-        = render partial: "renalware/medications/medication", locals: { pm: pm } unless pm.object.new_record?
+      = render partial: "renalware/medications/medication", locals: { pm: pm } unless pm.object.new_record?
 
-        #medications
-          = render partial: "renalware/medications/new", locals: { pm: pm } if pm.object.new_record?
+      #medications
+        = render partial: "renalware/medications/new", locals: { pm: pm } if pm.object.new_record?
 
-      - unless current_user.read_only?
-        .row
+    - unless current_user.read_only?
+      .row
+        .large-12.columns
           = f.link_to_add "Add a new medication", :medications, class: "add-medication"
-        .row
+      .row
+        .large-12.columns
           = f.submit "Save Medication", class: "button tiny mt"
           span= " or "
           = link_to "cancel", patient_clinical_summary_path(@patient)
