--- a/app/views/renalware/transplants/recipient_dashboards/show.html.slim
+++ b/app/views/renalware/transplants/recipient_dashboards/show.html.slim
@@ -1,9 +1,7 @@
-= render layout: "renalware/patients/layout", locals: { title: "Transplant Info" } do
-  .row
-    .columns-12.large
-      = render "renalware/transplants/recipient_workups/summary"
-      = render "renalware/transplants/registrations/summary"
-      - if @registration.persisted?
-        = render "renalware/transplants/registration_statuses/list"
+= render layout: "renalware/patients/layout", locals: { title: "Transplant Summary" } do
+  = render "renalware/transplants/recipient_workups/summary"
+  = render "renalware/transplants/registrations/summary"
+  - if @registration.persisted?
+    = render "renalware/transplants/registration_statuses/list"
 
-      = render "renalware/transplants/recipient_operations/list"
+  = render "renalware/transplants/recipient_operations/list"
