--- a/app/views/renalware/patients/_side_nav.html.slim
+++ b/app/views/renalware/patients/_side_nav.html.slim
@@ -2,6 +2,7 @@ ul.side-nav
   li.heading Overview
   li= link_to "Demographics", patient_path(@patient), title: "Demographics"
   li= link_to "Clinical Summary", patient_clinical_summary_path(@patient), title: "Clinical Summary"
+  li= link_to "Renal Summary", edit_patient_esrf_path(@patient), title: "Renal Summary"
   li= link_to "Modals", patient_modalities_path(@patient), title: "Patient Modality"
   li= link_to "Problems (#{Renalware::Problems::Problem.for_patient(@patient).count})", patient_problems_path(@patient), title: "Manage Problems"
   li= link_to "Medications (#{@patient.medications.length})", patient_medications_path(@patient), title: "Manage Medications"
