--- a/app/views/renalware/patients/_side_nav.html.slim
+++ b/app/views/renalware/patients/_side_nav.html.slim
@@ -1,5 +1,5 @@
 ul.side-nav
-  li.heading Overview
+  li.heading General
   li= link_to "Demographics", patient_path(@patient), title: "Demographics"
   li= link_to "Clinical Summary", patient_clinical_summary_path(@patient), title: "Clinical Summary"
   li= link_to "Renal Summary", edit_patient_esrf_path(@patient), title: "Renal Summary"
