Remove titles for now
Prefer less noise in the markup

--- a/app/views/renalware/patients/_side_nav.html.slim
+++ b/app/views/renalware/patients/_side_nav.html.slim
@@ -1,14 +1,14 @@
 ul.side-nav
   li.heading General
-  li= link_to "Demographics", patient_path(@patient), title: "Demographics"
-  li= link_to "Clinical Summary", patient_clinical_summary_path(@patient), title: "Clinical Summary"
-  li= link_to "Renal Summary", edit_patient_esrf_path(@patient), title: "Renal Summary"
-  li= link_to "Modals", patient_modalities_path(@patient), title: "Patient Modality"
-  li= link_to "Problems (#{Renalware::Problems::Problem.for_patient(@patient).count})", patient_problems_path(@patient), title: "Manage Problems"
-  li= link_to "Medications (#{@patient.medications.length})", patient_medications_path(@patient), title: "Manage Medications"
-  li= link_to "Events (#{Renalware::Events::Event.for_patient(@patient).count})", patient_events_path(@patient), title: "Patient Events"
-  li= link_to "Clinic Visits (#{@patient.clinic_visits.length})", patient_clinic_visits_path(@patient), title: "Clinic Visits"
-  li= link_to "Letters (#{@patient.letters.length})", patient_letters_path(@patient), title: "Letters"
+  li= link_to "Demographics", patient_path(@patient)
+  li= link_to "Clinical Summary", patient_clinical_summary_path(@patient)
+  li= link_to "Renal Summary", edit_patient_esrf_path(@patient)
+  li= link_to "Modals", patient_modalities_path(@patient)
+  li= link_to "Problems (#{Renalware::Problems::Problem.for_patient(@patient).count})", patient_problems_path(@patient)
+  li= link_to "Medications (#{@patient.medications.length})", patient_medications_path(@patient)
+  li= link_to "Events (#{Renalware::Events::Event.for_patient(@patient).count})", patient_events_path(@patient)
+  li= link_to "Clinic Visits (#{@patient.clinic_visits.length})", patient_clinic_visits_path(@patient)
+  li= link_to "Letters (#{@patient.letters.length})", patient_letters_path(@patient)
   li.divider
   li.heading Regimes
   li= link_to_if display_pd_menu(@patient.modalities.with_deleted), "PD", patient_pd_summary_path(@patient)
