Match table header font-size

--- a/app/assets/stylesheets/lib/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/lib/foundation_and_overrides.scss
@@ -1278,7 +1278,7 @@ $sub-nav-list-margin: rem-calc(-4 0 0);
 
 // These control the table head styles
 // $table-head-bg: $white-smoke  ;
-// $table-head-font-size: rem-calc(14);
+$table-head-font-size: rem-calc(13);
 // $table-head-font-color: $jet;
 // $table-head-font-weight: $font-weight-bold;
 // $table-head-padding: rem-calc(8 10 10);
