Extract items from global stylesheet
Putting styles in better homes

--- a/app/assets/stylesheets/renalware/lists.css.scss
+++ b/app/assets/stylesheets/renalware/lists.css.scss
@@ -11,3 +11,8 @@ ul.stripy-list {
     text-decoration: underline;
   }
 }
+
+ul.bullet-number {
+  list-style-type: decimal;
+  text-align: left;
+ }
