Remove unecessary formatting

--- a/app/views/renalware/medications/index.html.slim
+++ b/app/views/renalware/medications/index.html.slim
@@ -15,6 +15,6 @@
           = f.link_to_add "Add a new medication", :medications, class: "add-medication"
       .row
         .large-12.columns
-          = f.submit "Save Medication", class: "button tiny mt"
+          = f.submit "Save Medication", class: "button tiny"
           span= " or "
           = link_to "cancel", patient_clinical_summary_path(@patient)
