--- a/app/views/renalware/exit_site_infections/_form.html.slim
+++ b/app/views/renalware/exit_site_infections/_form.html.slim
@@ -3,9 +3,7 @@
   = es.hidden_field :patient_id
 
 .row
-  = field_set_tag do
-    legend Infection
-
+  = field_set_tag "Infection" do
     = es.label :diagnosis_date
     = es.date_select(:diagnosis_date, { start_year: (1.year.ago).year, end_year: (1.year.since).year, order: [:day, :month, :year] }, class: "datetime")
 
@@ -38,9 +36,7 @@
       = es.link_to_add 'Add a new medication', :medications, model_object: Renalware::Medication.exit_site, class: 'add-medication right mt'
 
 .row
-  = field_set_tag do
-    legend Comments
-
+  = field_set_tag "Comments" do
     = es.label :notes, "General notes about this infection"
     = es.text_area :notes, cols: 50, rows: 6
 
