--- a/app/views/renalware/modalities/modalities/new.html.slim
+++ b/app/views/renalware/modalities/modalities/new.html.slim
@@ -6,45 +6,36 @@
         as: :modality,
         url: patient_modalities_path(@patient),
         wrapper: "horizontal_form" do |m|
-      .row
-        .large-12.columns
-          fieldset
-            legend New Modality
-            .row
-              .large-3.columns
-                .hide-death
-                  = link_to "Renal Registry Reason for Change Codes", "#", id: "modal-reason-code", class: "button tiny mt"
-            .large-9.columns
 
-              ul.no-bullet
+        .large-9.columns
+          = field_set_tag "New Modality"
 
-                li
-                  = m.input :description_id,
-                      input_html: { id: "modality-description-select" },
-                      collection: Renalware::Modalities::Description.all,
-                      label_method: :name, value_method: :id
+              = m.input :description_id,
+                  input_html: { id: "modality-description-select" },
+                  collection: Renalware::Modalities::Description.all,
+                  label_method: :name, value_method: :id
 
-                li.hide-death
-                  = m.input :modal_change_type,
-                      label: "Type of Change",
-                      input_html: { class: "modal-change-type" },
-                      collection: Renalware::Modalities::ChangeType.to_a
+              .hide-death
+                = m.input :modal_change_type,
+                    label: "Type of Change",
+                    input_html: { class: "modal-change-type" },
+                    collection: Renalware::Modalities::ChangeType.to_a
 
-                li.hide-death
-                  = m.input :reason_id,
-                      label: "Reason for Change",
-                      input_html: { class: "modality-reason-select" },
-                      collection: Renalware::Modalities::Reason.where(type: m.object.modal_change_type),
-                      label_method: :description, value_method: :id
+              .hide-death
+                = m.input :reason_id,
+                    label: "Reason for Change",
+                    input_html: { class: "modality-reason-select" },
+                    collection: Renalware::Modalities::Reason.where(type: m.object.modal_change_type),
+                    label_method: :description, value_method: :id
 
-                li
-                  = m.input :started_on, as: :date_picker
+              .hide-death.reference.large-offset-5.large-7.columns
+                = link_to "Renal Registry Reason for Change Codes", "#", id: "modal-reason-code"
 
-                li.hide-death
-                  = m.input :notes, as: :text, input_html: { rows: 5 }
+              = m.input :started_on, as: :date_picker
 
-      .row
-        .large-12.columns
-          = m.submit "Save", class: "button"
-          span= " or "
-          = link_to "cancel", patient_modalities_path(@patient)
+              .hide-death
+                = m.input :notes, as: :text, input_html: { rows: 5 }
+
+              = m.submit "Save", class: "button"
+              span= " or "
+              = link_to "cancel", patient_modalities_path(@patient)
